methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:4: error: illegal start of simple pattern
      for (k in <- 1 to 4){
                ^PatternPicture:15: error: '<-' expected but '}' found.
    }
    ^